[package]
name = "hash-storage"
version = "2.0.0"
authors = ["Alexander <mail@fomalhaut.su>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
sha2 = "0.8.1"
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.4", features = ["sqlite"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0"
bigi = { git = "https://github.com/fomalhaut88/bigi.git", tag = "v0.4.0" }
bigi-ecc = { git = "https://github.com/fomalhaut88/bigi-ecc.git", tag = "v0.4.0" }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
